--- a/chat-app/client/src/index.css
+++ b/chat-app/client/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 code {
