--- a/chat-app/client/src/components/Chat/styles.scss
+++ b/chat-app/client/src/components/Chat/styles.scss
@@ -67,5 +67,41 @@
 
     &__sendBtn {
         float: right;
+        transform: rotate(45deg);
+    }
+
+    &__heroImg {
+        max-height: 100%;
+        height: 90%;
+        background-image: url(../../../public/images/Welcome-img.png);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    &__welcomeText {
+        font-size: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    &__userOptions {
+        &--name {
+            font-size: 2rem;
+            background-color: #c3c6cf;
+            border-radius: 50%;
+            height: 50px;
+            width: 50px;
+            text-align: center;
+            cursor: pointer;
+        }
+    }
+
+    &__btn {
+        border: 0;
+        outline: 0;
+        background-color: #fff;
+        cursor: pointer;
     }
 }
