--- a/chat-app/client/src/components/Chat/styles.scss
+++ b/chat-app/client/src/components/Chat/styles.scss
@@ -3,6 +3,7 @@
     // User Details
     &__userDetailsContainer {
         max-height: 20vh;
+        border-bottom: .5px solid #c3c6cf;
     }
 
     &__userDetails {
@@ -27,10 +28,10 @@
         margin-bottom: 0;
 
         &--green {
-         background-color: rgba(0, 128, 0, 0.099);
-         height: 10px;
-         width: 10px;
-         border-radius: 50%;  
+            background-color: rgba(0, 128, 0, 0.099);
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
         }
     }
 
@@ -43,10 +44,11 @@
     }
 
     &__content {
-        background-color: #c3c6cf;
+        background-color: #71D6A4;
         padding: .8rem;
         border-radius: .5rem;
     }
+
     //Chat input
 
     &__inputContainer {
@@ -65,6 +67,7 @@
         border-bottom-left-radius: .25rem;
         border-bottom-right-radius: .25rem;
         max-height: 10vh;
+
         &:focus {
             outline: none;
         }
@@ -108,5 +111,16 @@
         outline: 0;
         background-color: #fff;
         cursor: pointer;
+    }
+}
+
+.scrollbar {
+    &::-webkit-scrollbar {
+        width: .2rem;
+
+        &-thumb {
+            background-color: #c3c6cf;
+            border-radius: .5rem;
+        }
     }
 }
