--- a/chat-app/client/src/components/Chat/styles.scss
+++ b/chat-app/client/src/components/Chat/styles.scss
@@ -23,6 +23,18 @@
             color: green;
             margin-bottom: .08rem;
         }
+
+        &--profile {
+            font-size: 1.5rem;
+            text-align: center;
+            background-color: #c3c6cf;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin-block: 0;
+            padding: 0.5rem;
+            margin-left: 4px;
+        }
     }
 
     &__userImg {
@@ -48,6 +60,15 @@
         max-height: 90vh;
         height: 80vh;
         overflow-y: auto;
+
+        &::-webkit-scrollbar {
+            width: .5rem;
+
+            &-thumb {
+                background-color: #c3c6cf;
+                border-radius: .5rem;
+            }
+        }
     }
 
     &__heroImg {
