--- a/chat-app/client/src/components/Sidebar/styles.scss
+++ b/chat-app/client/src/components/Sidebar/styles.scss
@@ -58,9 +58,67 @@
         }
     }
 
-    &__usersList {
-        height: inherit;
+    &__searchResult {
+        cursor: pointer;
+        position: relative;
+    }
+
+    &__selectedUsers {
+        p {
+            margin: 0;
+            cursor: pointer;
+        }
+
+        &--container {
+            font-size: .8rem;
+            padding: 5px;
+            background-color: #c3c6cf;
+            border-radius: 1.5rem;
+        }
+
+        &--content {
+            font-weight: 700;
+            text-align: center;
+            padding: 0.3rem 0.6rem;
+            cursor: pointer;
+        }
+    }
+
+    &__searchResultList {
+        max-height: 200px;
         overflow: auto;
+        position: absolute;
+        z-index: 1;
+        padding: 10px;
+        background-color: #c3c6cf4f;
+        left: 10px;
+        border-radius: .2rem;
+
+        &::-webkit-scrollbar {
+            width: .2rem;
+
+            &-thumb {
+                background-color: #c3c6cf;
+                border-radius: .5rem;
+            }
+        }
+    }
+
+    &__Lists {
+        height: calc(100% - 150px);
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: .2rem;
+
+            &-thumb {
+                background-color: #c3c6cf;
+                border-radius: .5rem;
+            }
+        }
+    }
+
+    &__usersList {
 
         &--users {
             border-radius: .2rem;
@@ -70,15 +128,26 @@
         &--selected {
             background-color: #c3c6cf;
         }
+    }
 
+    &__groupsList {
+        &--title {
+            font-size: 1.5rem;
+            text-align: center;
+            background-color: #c3c6cf;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin-block: 0;
+            padding: 0.5rem;
+            margin-left: 4px;
+        }
+    }
 
-        &::-webkit-scrollbar {
-            width: .2rem;
-
-            &-thumb {
-                background-color: #c3c6cf;
-                border-radius: .5rem;
-            }
+    &__selectUsers {
+        .dropdown-menu {
+            height: 150px !important;
+            overflow: auto !important;
         }
     }
 }
